--- a/CudaExercise1/CudaExercise1.vcxproj
+++ b/CudaExercise1/CudaExercise1.vcxproj
@@ -35,7 +35,11 @@
       <ExcludedFromBuild Condition="'$(Configuration)|$(Platform)'=='Debug|x64'">true</ExcludedFromBuild>
       <ExcludedFromBuild Condition="'$(Configuration)|$(Platform)'=='Release|x64'">true</ExcludedFromBuild>
     </CudaCompile>
-    <CudaCompile Include="cuda_main5.cu" />
+    <CudaCompile Include="cuda_main5.cu">
+      <ExcludedFromBuild Condition="'$(Configuration)|$(Platform)'=='Debug|x64'">true</ExcludedFromBuild>
+      <ExcludedFromBuild Condition="'$(Configuration)|$(Platform)'=='Release|x64'">true</ExcludedFromBuild>
+    </CudaCompile>
+    <CudaCompile Include="cuda_main5_1.cu" />
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="cuda_header.cuh" />
